--- a/client/src/components/header/header.html
+++ b/client/src/components/header/header.html
@@ -15,8 +15,8 @@
                 </div>
                 <div class="w-col w-col-6 w-col-small-5 w-col-tiny-5 w-col-big-mobile-5 column">
                     <div class="container-search">
-                        <input id="search-input" class="w-input" placeholder="חפש שאלה" autofocus type="text">
-                        <button id="search-button">
+                        <input id="search-input" class="w-input" placeholder="חפש שאלה" autofocus type="text" ng-model="query">
+                        <button id="search-button" ng-click="Header.getSearchResult()">
                             <svg class="icon icon-search">
                                 <use xlink:href="#icon-search"></use>
                             </svg>
@@ -33,7 +33,7 @@
 
                             <li>
                                 <div class="nav-link sign-up-button active" id="services-link"
-                                     ng-click="dropLogin = !dropLogin"><span>כניסה</span>
+                                     ng-click="Header.login()"><span>כניסה</span>
 
                                     <div class="login-tooltip">
                                         <div class="login-container">
@@ -65,7 +65,7 @@
 
                                             <div class="signup-container">
                                                 <p class="signup-text">חדש בTalkme?</p>
-                                                <a href="" class="submit">הרשמ/י</a>
+                                                <a href="" class="submit" ng-click="Header.signUp()">הרשמ/י</a>
                                             </div>
 
                                         </div>
