fix actions (login , logout....)

--- a/client/src/assets/scss/_settings.scss
+++ b/client/src/assets/scss/_settings.scss
@@ -1,3 +1,4 @@
 @import '../../states/login/login';
 @import '../../states/search/search';
 @import '../../components/header/header';
+@import '../../states/insidetalk/talkFactSheet';
