fix actions (login , logout....)

--- a/client/src/components/header/header.html
+++ b/client/src/components/header/header.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="w-col w-col-6 w-col-small-5 w-col-tiny-5 w-col-big-mobile-5 column">
                     <div class="container-search">
-                        <input id="search-input" class="w-input" placeholder="חפש שאלה" autofocus type="text" ng-model="query">
+                        <input id="search-input" class="w-input" placeholder="חפש שאלה" autofocus type="text" ng-model="Header.query">
                         <button id="search-button" ng-click="Header.search()">
                             <svg class="icon icon-search">
                                 <use xlink:href="#icon-search"></use>
