Added to search, login and global, factSheet scss html and js

--- a/client/src/assets/scss/_global.scss
+++ b/client/src/assets/scss/_global.scss
@@ -3,13 +3,14 @@
 /*---------- General -----------*/
 
 body {
-  font-family: 'HelveticaNeue-Roman';
+  font-family: 'HelveticaNeue-Roman', arial, sans-serif;
   color: #333;
   font-size: 14px;
   line-height: 20px;
   height: 100%;
-  letter-spacing: -0.1px;
+    letter-spacing: 0;
   background: #fefeff;
+	
 }
 
 h1 {
