--- a/client/src/components/header/_header.scss
+++ b/client/src/components/header/_header.scss
@@ -168,9 +168,6 @@
   float: right;
   margin-top: 0px;
   height: 35px;
-  -webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
   background: #fff;
   border: none;
   font-size: 18px;
@@ -185,11 +182,16 @@
 }
 
 .icon-search {
-  width: 15px;
-  height: 15px;
+   width: 15px;
+   height: 15px;
   fill: #868686;
   margin-top: 3px;
+	&.big{
+	 width: 21px;
+   height: 21px;	
+	}
 }
+	
 
 .menu li {
   display: inline-block;
@@ -484,7 +486,159 @@
     font-weight: 600;
     letter-spacing: 0;	
 }	
+	
+/*---------------------- Full Screen Search ----------------------*/ 	
 
+	.fullScreen{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    background-color: rgba(255,255,255, 0.9);
+    z-index: 5000;
+    right: 0;
+    max-width: 100%;
+	}
+	
+	.fullScreen-container{
+		max-width: 820px;
+		margin: 0px auto;
+		margin-top: 8%;
+		width: 100%;
+		position: relative;
+		z-index: 6000;
+		background: #fff;
+		
+	}
+	.bigSearch{
+    height: 60px !important;
+    border-right: none  !important;
+    border-top: none  !important;
+    border-left: none  !important;
+    font-size: 35px  !important; 
+    padding: 0  !important;
+    line-height: 1  !important;
+    box-shadow: none  !important;
+	}
+	
+	.bigSearchButton{
+	height: 60px  !important;
+    border-right: none  !important;
+    border-top: none  !important;
+    border-left: none  !important;
+    padding: 0  !important;
+    line-height: 1  !important;
+    box-shadow: none  !important;
+	background: none  !important;
+	}
+	
+	.close {
+    top: 3%;
+    right: 2%;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    margin: 0px;
+	cursor: pointer;
+	&:hover .icon-close {
+            background: #666;
+            fill: #fff;
+        }	
+}
+	
+
+	 
+	.icon-close {
+        width: 100%;
+        height: 100%;
+        padding: 15px;;
+        border-radius: 50%;
+        box-sizing: inherit;
+        fill: #666;
+        border: none;
+        &:hover {
+            border: none;
+        }
+		&.hidden{
+		display: none;
+		
+		}	
+	}
+
+@media screen and (max-width: 600px) {
+	.head{
+		border-bottom: none;
+	    padding: 0px 10px;
+	
+	}
+ .header {
+    box-shadow: none;
+    border-bottom: none;
+    padding: 0px 5px;
+  }
+ .top-bar {
+    padding: 0px;
+  }	
+.container-search {
+    max-width: 100%;
+    width: 100%;
+    height: 55px;
+    position: fixed;
+    top: 50px;
+    right: 0;
+    left: 0;
+    z-index: 100;
+    padding-top: 0px;
+}	
+ #search-input {
+    border: 1px solid #C4C4C4;
+    background-color: #fff;
+    -webkit-box-shadow: none;
+    -webkit-transition: none;
+    transition: none;
+    width: 85%;
+    height: 55px;
+    font-size: 16px;
+    margin-top: 0px;
+    font-weight: bold;
+    padding-right: 10px;
+    line-height: 30px;
+    display: block;
+    float: right;
+    padding: 0px 10px 0px 0px;
+    color: #666;
+    text-align: right;
+    margin-bottom: 0;
+    border-radius: 0px;
+    border-right: none;
+	border-top: none; 
+}	
+.login-tooltip{
+   display: none;	
+			
+	}
+ #search-button {
+    width: 15%;
+    display: block;
+    float: right;
+    margin-top: 0px;
+    height: 55px;
+    border: none;
+    font-size: 18px;
+    border: 1px solid #ccc;
+    background: #f6f6f6;
+    border-right: none;
+    border-radius: 0px;
+    border-left: none;
+	border-top: none; 
+	}
+	
+	
+}
+	
 }
 	
 
