--- a/client/src/components/header/header.html
+++ b/client/src/components/header/header.html
@@ -14,13 +14,35 @@
                     </div>
                 </div>
                 <div class="w-col w-col-6 w-col-small-5 w-col-tiny-5 w-col-big-mobile-5 column">
-                    <div class="container-search">
-                        <input id="search-input" class="w-input" placeholder="חפש שאלה" autofocus type="text" ng-model="Header.query">
-                        <button id="search-button" ng-click="Header.search()">
-                            <svg class="icon icon-search">
+                    <div class="container-search" ng-class="Header.fullscreenSearch ? 'fullScreen' : ''" >
+						<div ng-class="Header.fullscreenSearch ? 'close' : ''" ng-click="Header.closeFullScreen()">
+						<svg class="icon-close" ng-class="Header.fullscreenSearch ? '' : 'hidden'">
+							<use xlink:href="#icon-close"></use>
+						</svg>
+						</div>
+						<div ng-class="Header.fullscreenSearch ? 'fullScreen-container' : ''">
+                        <input id="search-input" ng-click="Header.gofullScreen()" class="w-input" placeholder="חפש שאלה" type="text" ng-model="Header.query" ng-class="Header.fullscreenSearch ? 'bigSearch' : ''">
+                        <button id="search-button" ng-click="Header.search()" ng-class="Header.fullscreenSearch ? 'bigSearchButton' : ''">
+                            <svg class="icon icon-search" ng-class="Header.fullscreenSearch ? 'big' : ''">
                                 <use xlink:href="#icon-search"></use>
                             </svg>
                         </button>
+						<section class="autocomplete-results-container">
+						 <div class="w-container clearfix">
+        					<div class="w-row">
+								<ul>
+								<li></li>
+								</ul>
+								<div class="w-col w-col-4 w-col-small-4 w-col-tiny-12 w-col-big-mobile-6 column">
+								
+								</div>
+							
+								
+							 </div>
+						  </div>
+							
+						</section>
+						</div>
                     </div>
                 </div>
                 <div class="w-col w-col-4 w-col-small-4 w-col-tiny-7 w-col-big-mobile-7 column">
