--- a/client/src/components/header/_header.scss
+++ b/client/src/components/header/_header.scss
@@ -281,7 +281,7 @@ tags-input .tags .input {
   top: 40px;
   border: #e8e8e8 1px solid;
   border-radius: 4px;
-  height: 357px;
+  height: 0;
   -webkit-transition: all .25s ease-out;
   -moz-transition: all .25s ease-out;
   -ms-transition: all .25s ease-out;
@@ -322,6 +322,7 @@ tags-input .tags .input {
 .sign-up-button.active + .login-tooltip {
   opacity: 1;
   display: block;
+  height: 357px;
 }
 
 /*-------------- login tooltip ----------------------*/
@@ -629,7 +630,7 @@ tags-input .tags .input {
 
 @media screen and (max-width: 600px) {
 	.head{
-		border-bottom: none;
+		
 	    padding: 0px 10px;
 	
 	}
@@ -676,7 +677,7 @@ tags-input .tags .input {
 	border-top: none; 
 }	
 .login-tooltip{
-   display: none;	
+   
 			
 	}
  #search-button {
@@ -694,6 +695,26 @@ tags-input .tags .input {
     border-left: none;
 	border-top: none; 
 	}
+
+ tags-input .tags .input {
+    height: 54px;
+    font-size: 17px;
+    line-height: 54px;
+}	
+tags-input .tags .tag-item {
+    margin: 13px 0px 13px 5px;
+    padding: 0 5px;
+    font: 15px "Helvetica Neue",Helvetica,Arial,sans-serif;
+    height: 29px;
+    line-height: 25px;
+    border: 1px solid #acacac;
+    border-radius: 3px;
+    color: #fff;	
+	}
+	tags-input .tags .tag-item .remove-button {
+		    margin: 0;
+		    font: 600 24px Arial,sans-serif;
+		}	
 	
 	
 }
