--- a/client/src/components/header/header.html
+++ b/client/src/components/header/header.html
@@ -1,69 +1,70 @@
 <div class="header">
-<div class="head">
-    <div class="w-container clearfix">
-        <div class="w-row">
-            <nav class="top-bar">
-                <div class="w-col w-col-2 w-col-small-3 w-col-tiny-5 w-col-big-mobile-5 column">
-                    <div class="logo-wrapper">
-                        <a href="#" id="logo">
-                            <svg class="icon icon-logo-small logo-symbol">
-                                <use xlink:href="#icon-logo-small"></use>
-                            </svg>
-                            <p class="logo-text">talkme</p>
-                        </a>
+    <div class="head">
+        <div class="w-container clearfix">
+            <div class="w-row">
+                <nav class="top-bar">
+                    <div class="w-col w-col-2 w-col-small-3 w-col-tiny-5 w-col-big-mobile-5 column">
+                        <div class="logo-wrapper">
+                            <a href="#" id="logo">
+                                <svg class="icon icon-logo-small logo-symbol">
+                                    <use xlink:href="#icon-logo-small"></use>
+                                </svg>
+                                <p class="logo-text">talkme</p>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="w-col w-col-6 w-col-small-5 w-col-tiny-5 w-col-big-mobile-5 column">
-                    <div class="container-search">
-					
-					
-<!--todo fix css , please notice tags-input has css file at _setting.scss
-                            <tags-input ng-model="tags" id="search-input" ng-click="Header.gofullScreen()"
-                                        class="w-input" placeholder="חפש שאלה" type="text" ng-model="Header.query"
-                                        ng-class="Header.fullscreenSearch ? 'bigSearch' : ''"></tags-input>-->
+                    <div class="w-col w-col-6 w-col-small-5 w-col-tiny-5 w-col-big-mobile-5 column">
+                        <div class="container-search">
 
 
-						<tags-input id="search-input" placeholder="חפש" type="text" ng-model="tags" ></tags-input>
-
-<!--                            <input  ng-click="Header.gofullScreen()" class="w-input" placeholder="חפש שאלה" type="text" ng-model="Header.query" ng-class="Header.fullscreenSearch ? 'bigSearch' : ''" >-->
-                        <button id="search-button" ng-click="Header.search()">
-                            <svg class="icon icon-search">
-                                <use xlink:href="#icon-search"></use>
-                            </svg>
-                        </button>
-<!--
-						<section class="autocomplete-results-container">
-						 <div class="w-container clearfix">
-        					<div class="w-row">
-								<ul>
-								<li></li>
-								</ul>
-								<div class="w-col w-col-4 w-col-small-4 w-col-tiny-12 w-col-big-mobile-6 column">
-
-								</div>
+                            <!--todo fix css , please notice tags-input has css file at _setting.scss
+                                                        <tags-input ng-model="tags" id="search-input" ng-click="Header.gofullScreen()"
+                                                                    class="w-input" placeholder="חפש שאלה" type="text" ng-model="Header.query"
+                                                                    ng-class="Header.fullscreenSearch ? 'bigSearch' : ''"></tags-input>-->
 
 
-							 </div>
-						  </div>
+                            <tags-input id="search-input" placeholder="חפש" type="text" ng-model="Header.tags"
+                                        min-length="2" max-length="10" pasteSplitPattern=";"></tags-input>
 
-						</section>
--->
-					
-                    </div>
-                </div>
-                <div class="w-col w-col-4 w-col-small-4 w-col-tiny-7 w-col-big-mobile-7 column">
-                    <nav role="navigation">
-                        <ul class="menu clearfix">
+                            <!--                            <input  ng-click="Header.gofullScreen()" class="w-input" placeholder="חפש שאלה" type="text" ng-model="Header.query" ng-class="Header.fullscreenSearch ? 'bigSearch' : ''" >-->
+                            <button id="search-button" ng-click="Header.search()">
+                                <svg class="icon icon-search">
+                                    <use xlink:href="#icon-search"></use>
+                                </svg>
+                            </button>
+                            <!--
+                                                    <section class="autocomplete-results-container">
+                                                     <div class="w-container clearfix">
+                                                        <div class="w-row">
+                                                            <ul>
+                                                            <li></li>
+                                                            </ul>
+                                                            <div class="w-col w-col-4 w-col-small-4 w-col-tiny-12 w-col-big-mobile-6 column">
 
-                            <!--	
-                                    TO DO: add signedUp variable that shows true if user is signedUp
+                                                            </div>
+
+
+                                                         </div>
+                                                      </div>
+
+                                                    </section>
                             -->
 
-                            <li ng-hide="Header.signedUp">
+                        </div>
+                    </div>
+                    <div class="w-col w-col-4 w-col-small-4 w-col-tiny-7 w-col-big-mobile-7 column">
+                        <nav role="navigation">
+                            <ul class="menu clearfix">
 
-                                <div class="nav-link sign-up-button" id="services-link"
-                                     ng-click="drop = !drop" ng-class="drop ? 'active' : ''"><span>כניסה</span>
-								</div>
+                                <!--
+                                        TO DO: add signedUp variable that shows true if user is signedUp
+                                -->
+
+                                <li ng-hide="Header.signedUp">
+
+                                    <div class="nav-link sign-up-button" id="services-link"
+                                         ng-click="drop = !drop" ng-class="drop ? 'active' : ''"><span>כניסה</span>
+                                    </div>
                                     <div class="login-tooltip">
                                         <div class="login-container">
                                             <div class="form-container">
@@ -95,28 +96,29 @@
                                             <div class="signup-container">
                                                 <p class="signup-text">חדש בTalkme?</p>
 
-                                    <!--		TO DO:	redirect the user to login state-->
-                                                <a href="#/login" class="submit" >הרשמ/י</a>
+                                                <!--		TO DO:	redirect the user to login state-->
+                                                <a href="#/login" class="submit">הרשמ/י</a>
                                             </div>
 
                                         </div>
                                     </div>
 
-                            </li>
+                                </li>
 
-                            <!--TO DO: ng-show when user is signedUp + add ng-src profile picture and username -->
-                            <li ng-show="Header.signedUp">
-								<a  class="nav-link profile" href=""><img class="profile-image" ng-src="">
-								<p class="profile-name">{{ username }}</p></a>
-							</li>
-                        </ul>
-                    </nav>
-                </div>
+                                <!--TO DO: ng-show when user is signedUp + add ng-src profile picture and username -->
+                                <li ng-show="Header.signedUp">
+                                    <a class="nav-link profile" href=""><img class="profile-image" ng-src="">
 
-            </nav>
+                                        <p class="profile-name">{{ username }}</p></a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+
+                </nav>
+            </div>
         </div>
-    </div>
 
-</div>
-<!--<div ng-click="Header.closeFullScreen()" ng-class="Header.fullscreenSearch ? 'fullScreen' : ''"></div>	-->
+    </div>
+    <!--<div ng-click="Header.closeFullScreen()" ng-class="Header.fullscreenSearch ? 'fullScreen' : ''"></div>	-->
 </div>
