--- a/client/src/states/search/_search.scss
+++ b/client/src/states/search/_search.scss
@@ -5,7 +5,7 @@
   em{
   font-style: normal;
   font-weight: bold;
-  background-color: yellow;
+//  background-color: yellow;
   }
 
   .main-section {
