--- a/client/src/assets/scss/_global.scss
+++ b/client/src/assets/scss/_global.scss
@@ -7,7 +7,7 @@ body {
   color: #333;
   font-size: 14px;
   line-height: 20px;
-  height: 100%;
+//  height: 100%;
     letter-spacing: 0;
   background: #fefeff;
 	
@@ -127,13 +127,14 @@ a {
 }
 
 html {
-  height: 100%;
+ min-height: 100%;
+	
 }
 
 body {
   margin: 0;
   min-height: 100%;
-  background-color: #fefeff;
+  background-color: #fff;
   color: #333;
 }
 
