Changes: 1. applyied font-face fonts 2. added 'time ago' filter for calculating answers 'created_time' 3.  talkFactSheet - added the getPicId() function to the expression for background image Todo: get all the images to a folder on the server so we can call them. 4. talkFactSheet - added profile images and links to profile 5. some scss changes 6. added more 'נושאים חמים' and connected them to the search 7. added 'most popular' icon 8. added profile images and usernames (as titles) 9.

--- a/client/src/states/search/_search.scss
+++ b/client/src/states/search/_search.scss
@@ -14,8 +14,9 @@
 	
   em{
   font-style: normal;
-  font-weight: bold;
-//  background-color: yellow;
+  font-weight: normal;
+  background-color: #44a3e4;
+  color: white;
   }
 
   .main-section {
@@ -113,7 +114,7 @@
     min-height: 400px;
   }
 
-  .icon-calendar {
+  .icon-calendar, .icon-popular {
     width: 24px;
     height: 24px;
     display: inline-block;
@@ -343,6 +344,8 @@
     cursor: pointer;
     max-width: 800px;
     word-wrap: break-word;
+//    text-align: justify;
+//    text-justify: inter-word;	 	  
     &.standalone {
       color: #fff;
       line-height: 28px;
@@ -546,7 +549,7 @@
   }
 
   .question-header-box {
-    max-width: 690px;
+    max-width: 680px;
     margin: 0px auto;
     padding: 40px 10px 10px;
     position: relative;
@@ -629,6 +632,8 @@
     max-width: 800px;
     cursor: auto;
     word-wrap: break-word;
+//    text-align: justify;
+//    text-justify: inter-word;	  
   }
 
   .answer-date {
@@ -649,6 +654,10 @@
     opacity: 1;
   }
 
+  .answer-box:hover .answer-date {
+    opacity: 1;
+  }	
+	
   .answer-comments {
     margin-right: 54px;
   }
