--- a/client/src/components/header/header.html
+++ b/client/src/components/header/header.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" ng-init="Header.isLoggedIn()">
     <div class="head">
         <div class="w-container clearfix">
             <div class="w-row">
@@ -59,7 +59,7 @@
                                         TO DO: add signedUp variable that shows true if user is signedUp
                                 -->
 
-                                <li ng-hide="Header.signedUp">
+                                <li ng-hide="Header.currentUser">
 
                                     <div class="nav-link sign-up-button" id="services-link"
                                          ng-click="drop = !drop" ng-class="drop ? 'active' : ''"><span>כניסה</span>
@@ -105,10 +105,12 @@
                                 </li>
 
                                 <!--TO DO: ng-show when user is signedUp + add ng-src profile picture and username -->
-                                <li ng-show="Header.signedUp">
-                                    <a class="nav-link profile" href=""><img class="profile-image" ng-src="">
+                                <li ng-show="Header.currentUser">
+								
+                                    <a class="nav-link profile" href=""><img class="profile-image" ng-src="{{ Header.currentUser.imageUrl ? Header.currentUser.imageUrl : 'images/profile-monstr.png' }}">
 
-                                        <p class="profile-name">{{ username }}</p></a>
+                                        <p class="profile-name">{{ Header.currentUser.displayName ? Header.currentUser.displayName : Header.currentUser.email.split("@")[0] }}</p>
+									</a>
                                 </li>
                             </ul>
                         </nav>
