--- a/client/src/states/search/_search.scss
+++ b/client/src/states/search/_search.scss
@@ -68,7 +68,77 @@
     padding: 0;
     border: none;
   }
+	
+ /*--------- welcome box -----------*/	
+	
+	.icons {
+    position: relative;
+    left: 0;
+    right: 0;
+    width: 100%;
+    top: 50px;
+    margin-top: -70px;
+    opacity: 0.15;
+    z-index: 0;
+}
+	.icon-icons{
+		width: 100%;
+	}
+	
+	
+	.welcome-box{
+		position: relative;
+		width: 100%;
+		height: 200px;
+		display: inline-block;
+		margin-bottom: 10px;
+		    background: #fefeff;
+	    border: 1px solid #f2f2f2;
+		 transition: all linear 0.15s;
+		overflow: hidden;
+	padding: 75px 0 0;	
+		&.closed{
+			height: 0px;
+			opacity: 0;
+			padding: 0;
+			margin: 0;
+		}
+	}	
+	
+	
+	
+	
+	.welcome-title{
+		text-align: center;
+	    font-size: 20px;
+    font-weight: normal;
+    color: #333;	
+	}
+	.welcome-subtitle{
+		text-align: center;
+	 font-size: 14px;
+    font-weight: normal;
+    color: #a49f99;		
+	}
+	
+.close.welcome {
+        top: 10px;
+        right: 10px;
+        width: 35px;
+        height: 35px;
+        position: absolute;
+        margin: 0px;
+		cursor: pointer;
+    }	
+.icon-close {
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        border-radius: 50%;
+        box-sizing: inherit;
+        fill: #a49f99;
 
+    }
   /*--------- questions -----------*/
 
   .questions-group, .answers-group {
@@ -77,10 +147,10 @@
     height: auto;
     float: right;
 	background: #fefeff; 
-	 padding: 15px 0 0;  
   }
 	.questions-group{
 	      border: 1px solid #f2f2f2; 	
+		padding: 15px 0 0;
 	}
 	
 	
@@ -524,12 +594,22 @@
       width: 100%;
       padding: 5px 0px;
       font-size: 14px;
+   -webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out, border 0.3s ease-in-out;	
       color: #999;
     }
     &:hover a {
       color: #44a3e4;
     }
+	&:hover a img {
+      opacity: 1;
+    }  
+	  
   }
+	
+	
+	
 
   /*--------- inside a question page -----------*/
 
@@ -691,7 +771,8 @@
     float: right;
     display: block;
     max-width: 720px;
-    margin-bottom: 20px;
+    margin-bottom: 35px;
+	
   }
 
   .profile-comment-section {
@@ -700,21 +781,42 @@
     float: right;
   }
 
-  .comment-section {
+.comment-section {
+  margin: 0px auto;
+  min-height: 150px;
+  position: relative;
+  background-color: #fff;
+  float: left;
+  display: block;
+  border: 1px solid;
+  border-color: #E5E6E9 #DFE0E4 #D0D1D5;
+  width: 100%;
+  max-width: calc(100% - 60px);
+  margin-left: 0;
+  border-radius: 5px;
+    opacity: 0.3;	
+  
+}
+	
+ 	
+	.comming-soon-comment{
     margin: 0px auto;
     min-height: 150px;
-    position: relative;
-    background-color: #fff;
+    position: absolute;
+    background-color: rgba(51, 51, 51, 0.07);
     float: left;
     display: block;
-    border: 1px solid;
-    border-color: #E5E6E9 #DFE0E4 #D0D1D5;
     width: 100%;
     max-width: calc(100% - 60px);
-    margin-left: 0;
-    border-radius: 5px;
-  }
-
+    z-index: 500;
+    left: 0;
+    padding-top: 55px;
+    text-align: center;
+    color: #999;
+		
+	}	
+	
+	
   .round-profile.feed.comment {
     margin-top: 8px;
     width: 44px;
@@ -1082,6 +1184,28 @@
     margin-top: -10px;
   }
 
+	.img-rounded{
+    position: relative;
+    overflow: hidden;
+    border-radius: 3px;
+    height: 90px;
+    width: 100%;
+    object-fit: cover;
+	opacity: 0.2;	
+	-webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out, border 0.3s ease-in-out;		
+		
+	}	
+	
+	.links-title{
+    line-height: 140%;
+    font-size: 15px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+	
+	
   @media screen and (max-width: 769px) {
     .categories-container {
       display: none;
