Changes: 1. changed linking way: to move from search to talkFactSheet I used ui-sref - shows the link instead of calling a function. 2. Added error text in login page and warning borders for the input 3. removed some old comments from html

--- a/client/src/components/header/header.html
+++ b/client/src/components/header/header.html
@@ -107,7 +107,7 @@
                                 <!--TO DO: ng-show when user is signedUp + add ng-src profile picture and username -->
                                 <li ng-show="Header.currentUser">
 								
-                                    <a class="nav-link profile" href=""><img class="profile-image" ng-src="{{ Header.currentUser.imageUrl ? Header.currentUser.imageUrl : 'images/profile-monstr.png' }}">
+                                    <a class="nav-link profile" href=""><img class="profile-image" ng-src="{{ Header.currentUser.imageUrl ? Header.currentUser.imageUrl : 'http://res.cloudinary.com/talkme-co/image/upload/v1470909661/profile-monstr_ldqvqq.png' }}">
 
                                         <p class="profile-name">{{ Header.currentUser.displayName ? Header.currentUser.displayName : Header.currentUser.email.split("@")[0] }}</p>
 									</a>
