--- a/client/src/states/search/_search.scss
+++ b/client/src/states/search/_search.scss
@@ -321,6 +321,8 @@
     border: 1px solid rgba(107, 108, 108, 0.25);
     background-color: #F2F2F2;
     margin-left: 15px;
+    position: relative;
+    z-index: 500;	  
   }
 
   .profile-image {
@@ -406,7 +408,17 @@
       position: relative;
     }
   }
-
+	
+	.question-link{
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		height: 100%;
+	}
+	
   .question-title {
     color: #333;
     line-height: 26px;
@@ -455,6 +467,7 @@
   .upvote-button {
     border: 1px solid #48ACF1;
     right: 70px;
+	z-index: 500;
   }
 
   .comments-button.big {
