--- a/client/src/components/header/_header.scss
+++ b/client/src/components/header/_header.scss
@@ -69,13 +69,90 @@
   }
   &.profile {
     padding: 6.5px 0px;
-    p {
+	width: auto;
+    height: auto;
+    cursor: pointer;
+    position: relative;  
+    
+	  p {
       padding-left: 10px;
       float: left;
       line-height: 39px;
     }
   }
 }
+
+
+
+.menu-tooltip {
+ background: #fff;
+    bottom: 100%;
+    color: #00afd7;
+    display: block;
+    left: 0px;
+    margin-top: 0px;
+    opacity: 0;
+    padding: 20px;
+    pointer-events: none;
+    position: absolute;
+    width: 500px;
+    top: 50px;
+    border: #e8e8e8 1px solid;
+    border-radius: 4px;
+    height: 500px;
+    -webkit-transform: translateY(10px);
+    transform: translateY(10px);
+    -webkit-transition: all .25s ease-out;
+    transition: all .25s ease-out;
+    -ms-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+    -o-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+    z-index: 201;
+    width: 132px;
+    height: 45px;
+    padding: 10px;
+    left: 0px;
+
+  &:before {
+    border-left: solid transparent 12px;
+    border-right: solid transparent 12px;
+    top: -13px;
+    content: " ";
+    height: 0px;
+    margin-left: -15px;
+    left: 50%;
+    position: absolute;
+    width: 0px;
+    border-bottom: 12px solid #e8e8e8;
+  }
+  &:after {
+    border-left: solid transparent 10px;
+    border-right: solid transparent 10px;
+    border-bottom: solid #fff 10px;
+    top: -10px;
+    content: " ";
+    height: 0;
+    margin-left: -13px;
+    left: 50%;
+    position: absolute;
+    width: 0;
+  }
+}
+.nav-link.profile.drop-down > .menu-tooltip{
+	  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: translateY(0px);
+     -moz-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+       -o-transform: translateY(0px);
+          transform: translateY(0px);
+ display: block;
+}	
+	
+	.log-out{
+		text-align: center;
+	}	
+	
 	
 .profile-image {
   display: inline-block;
@@ -701,6 +778,7 @@ tags-input .tags .input {
     height: 54px;
     font-size: 17px;
     line-height: 54px;
+	    width: 100% !important; 
 }	
 tags-input .tags .tag-item {
     margin: 13px 0px 13px 5px;
