--- a/client/src/components/header/header.html
+++ b/client/src/components/header/header.html
@@ -23,7 +23,7 @@
                                                                     ng-class="Header.fullscreenSearch ? 'bigSearch' : ''"></tags-input>-->
 
 
-							<tags-input id="search-input" placeholder="חפש באנגלית או בעברית לפי Tags" type="text" ng-model="Header.tags" min-length="2" max-length="15" add-on-space="true" add-on-comma="false"></tags-input>
+							<tags-input id="search-input" placeholder="חפש באנגלית או בעברית לפי Tags" type="text" ng-model="Header.tags" min-length="2" max-length="15" add-on-space="true" add-on-comma="false" onfocus="blur();"></tags-input>
 
 							<!--                            <input  ng-click="Header.gofullScreen()" class="w-input" placeholder="חפש שאלה" type="text" ng-model="Header.query" ng-class="Header.fullscreenSearch ? 'bigSearch' : ''" >-->
 							<button id="search-button" ng-click="Header.search()">
