--- a/client/src/components/header/_header.scss
+++ b/client/src/components/header/_header.scss
@@ -25,35 +25,28 @@
   float: right;
   margin-right: 0rem;
   width: 100px;
-  margin-top: 8px;
-  color: #44a3e4;
+  margin-top: 13px;
   text-transform: none;
   cursor: pointer;
 }
 
-.logo-symbol {
-  margin-top: 3px;
-  float: left;
-  display: block;
-  width: 27%;
-  text-align: left;
-  direction: ltr;
-  fill: #44a3e4;
-  height: 28px;
-}
+
 
 .logo-text {
-  float: left;
+  float: right;
   display: block;
-  width: 73%;
-  color: #44a3e4;
-  font-family: "M+ 2p black";
-  font-size: 20px;
-  text-align: left;
-  direction: ltr;
-  padding-left: 2px;
-  line-height: 31px;
+  width: 100%;
 }
+	
+	.vulu-logo{
+	 width: 70px;
+    height: 25px;
+    float: right;
+    display: block;	
+	 fill: #44a3e4;	
+	}	
+   
+	
 
 .nav-link {
   display: inline-block;
