--- a/client/src/states/search/_search.scss
+++ b/client/src/states/search/_search.scss
@@ -401,7 +401,10 @@
     -ms-flex-pack: center;
     justify-content: center;
   }
-
+	.flex-box a{
+position: relative;
+		z-index: 1;
+	}
   .flex-height {
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -422,6 +425,7 @@
 		bottom: 0;
 		width: 100%;
 		height: 100%;
+		z-index: 0;
 	}
 	
   .question-title {
@@ -523,7 +527,7 @@
   .comments-button {
     border: 1px solid #C4C4C4;
     right: 135px;
-    max-width: 58px;
+        max-width: 95px;
   }
 
 	.groupName-link{
@@ -841,6 +845,7 @@
   border: 1px solid #f2f2f2;
   color: #999;
   float: right;
+  margin-bottom: 15px;
   a {
     color: #44a3e4;
     &:hover {
@@ -848,6 +853,126 @@
     }
   }
 }
+
+
+ /*------------------ loader -------------------*/	
+#page-loading{
+    float: left;
+    display: block;
+    width: 100%;
+}
+
+
+.loading-box{
+    width: 175px;
+	margin: 0px auto;
+	height: 30px;
+	display: block;
+	margin-top: 20%;
+}
+
+.loading-header{
+    display: block;
+    color: #a49f99;
+    font-size: 30px;
+    -webkit-text-shadow: inset 0.5px 0.5px 2px rgba(0, 0, 0, 0.4);
+    -moz-text-shadow: inset 0.5px 0.5px 2px rgba(0, 0, 0, 0.4);
+    text-shadow: inset 0.5px 0.5px 2px #000;
+    float: right;
+    margin-right: 10px;
+
+}
+
+.loading-text{
+    float: left;
+    color: #a49f99;
+    width: 100%;
+    font-size: 15px;
+    margin-top: 8px;
+    text-align: center;
+}
+
+.loading-icon{
+    width: 30px;
+    height: 30px;
+    display: block;
+    float: right;
+}
+
+.loader {
+  font-size: 10px;
+  margin: 0px auto;
+  text-indent: -9999em;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+  background: #3498db;
+  background: -moz-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+  background: -webkit-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+  background: -o-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+  background: -ms-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+  background: linear-gradient(to right, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+  position: relative;
+  -webkit-animation: load3 1.4s infinite linear;
+  animation: load3 1.4s infinite linear;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.loader:before {
+  width: 50%;
+  height: 50%;
+  background: #a49f99;
+  border-radius: 100% 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+}
+.loader:after {
+  background: #fafafa;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  content: '';
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.white{
+	
+}
+
+.white:after{
+  background: #fff;	
+}
+
+@-webkit-keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+	
+	
 	
   /*------------------ Write a comment -------------------*/
 
