--- a/client/src/components/header/header.html
+++ b/client/src/components/header/header.html
@@ -6,7 +6,7 @@
 					<div class="w-col w-col-2 w-col-small-3 w-col-tiny-5 w-col-big-mobile-5 column">
 						<div class="logo-wrapper">
 							<a href="#" id="logo">
-								<div class="logo-text"><img src="../../assets/images/vulu-logo.svg" class="vulu-logo"></div>
+								<div class="logo-text"><img src="http://res.cloudinary.com/talkme-co/image/upload/v1477004013/vulu-logo_f9dhbq.svg" class="vulu-logo"></div>
 							</a>
 						</div>
 					</div>
